--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
     
 
 <!-- Loading container div -->
-<div class="loading"></div>
+<div class="loading">
+  <div class="loading-container">
+    <div class="icon logo-desktop"></div>
+    <div class="spinner">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
+  </div>
+</div>
+<!-- /Loading container div -->
+
 
 <!-- RSVP form -->
 <div id="rsvp" class="row">
