Added small CSS animation for RSVP.

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 
   <a href="#" class="rsvp-close icon close">Close</a>
 
-  <div id="rsvp-thankyou" class="hide">
+  <div id="rsvp-thankyou">
     <div class="icon checkmark"></div>
     <h3>Thank you for RSVPing</h3>
   </div>
-  <div id="rsvp-error" class="hide">
+  <div id="rsvp-error">
     <h3>An error occurred :(<h3>
     <h4>Please reload the page and try again.</h4>
   </div>
 
   <div class="small-12 medium-6 large-4 large-centered medium-centered columns">
     <div class="row-content text-center">
-      <form id="rsvp-form" data-parsley-validate>
+      <form id="rsvp-form" data-parsley-validate class="test">
         <h2 class="mint">RSVP</h2>
 
         <div class="radio-group two-items form-group going-group">
