--- a/index.html
+++ b/index.html
@@ -371,6 +371,9 @@
       <h2 class="white">We hope to see you there!</h2>
       <div class="icon medium-white-div"></div>
     </div>
+    <p class="acknowledgements">
+      Photos courtesy of the magnificent Jason Gilmore.<br/>Website design and layout by <a href="https://dribbble.com/andsem" target="_BLANK">Andrew Semuschak</a> a gentleman and a scholar.
+    </p>
   </div>
 </div>
 <!-- /Outro content -->
