--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <title>Caroline &amp; Arvin are getting married in Toronto!</title>
+    <!--[if IE]><link rel="shortcut icon" href="images/favicon.ico"><![endif]-->
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="stylesheets/app-dist.css">
 
   </head>
