move it audio tag.

--- a/index.html
+++ b/index.html
@@ -278,7 +278,11 @@
         <p>We each decided to choose one dear friend to stand by our side on this day. Oh, and an exquisite little girl to throw some flowers!</p>
         <p><strong>Ben Van Dongen</strong> - Best man & Witness<br/> “I met Ben in grade 9 and he’s been a thorn in my side ever since.“ - Arvin.</p>
         <p><strong>Justine Noiseux</strong> - Maid of honor & Witness<br/> "She's a Lady. Whoa whoa whoa, She's a Lady." - Caroline</p>
-        <p><strong>Lou Habib</strong> - The Flower girl<br/>“Every morning, we wake up to her exquisite rendition of the classic <a href="misc/move-it-move-it.mp3" target="_BLANK">"I like to move it"</a> as our alarm clock tone. Of course she’s our flower girl” - Caroline  & Arvin</p>
+        <p><strong>Lou Habib</strong> - The Flower girl<br/>“Every morning, we wake up to her exquisite rendition of the classic <a href="#" class="move-it-trigger">"I like to move it"</a> as our alarm clock tone. Of course she’s our flower girl” - Caroline  & Arvin</p>
+        <audio class="move-it-player hide" controls>
+          <source src="misc/move-it-move-it.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
       </div>
     </div>
   </div>
@@ -374,7 +378,7 @@
       <div class="icon medium-white-div"></div>
     </div>
     <p class="acknowledgements">
-      Photos courtesy of the magnificent Jason Gilmore.<br/>Website design and layout by <a href="https://dribbble.com/andsem" target="_BLANK">Andrew Semuschak</a> a gentleman and a scholar.
+      Photos courtesy of the magnificent <a href="http://www.urgencycompany.com/" target="_BLANK">Jason Gilmore</a>.<br/>Website design and layout by <a href="https://dribbble.com/andsem" target="_BLANK">Andrew Semuschak</a> a gentleman and a scholar.
     </p>
   </div>
 </div>
