--- a/index.html
+++ b/index.html
@@ -279,10 +279,12 @@
         <p><strong>Ben Van Dongen</strong> - Best man & Witness<br/> “I met Ben in grade 9 and he’s been a thorn in my side ever since.“ - Arvin.</p>
         <p><strong>Justine Noiseux</strong> - Maid of honor & Witness<br/> "She's a Lady. Whoa whoa whoa, She's a Lady." - Caroline</p>
         <p><strong>Lou Habib</strong> - The Flower girl<br/>“Every morning, we wake up to her exquisite rendition of the classic <a href="#" class="move-it-trigger">"I like to move it"</a> as our alarm clock tone. Of course she’s our flower girl” - Caroline  & Arvin</p>
-        <audio class="move-it-player hide" controls>
-          <source src="misc/move-it-move-it.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-        </audio>
+        <div class="move-it-player hide">
+          <audio controls>
+            <source src="misc/move-it-move-it.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
+        </div>
       </div>
     </div>
   </div>
@@ -304,21 +306,21 @@
           <img class="row-image" data-interchange="[images/bg-slide1-mobile.jpg, (default)], [images/bg-slide1-tablet.jpg, (medium)], [images/bg-slide1-desktop.jpg, (large)]">
           <div class="slide-wrapper">
             <h2 class="gold">#1 Shopping on Queen Street West</h2>
-            <p class="white show-for-medium-up">Men and women clothing stores are hard to resist on this trip! The best shopping is between Bathurst and Bellwoods.</p>
+            <p class="white">Men and women clothing stores are hard to resist on this trip! The best shopping is between Bathurst and Bellwoods.</p>
           </div>
         </li>
         <li class="slide-ripleys">
           <img class="row-image" data-interchange="[images/bg-slide3-mobile.jpg, (default)], [images/bg-slide3-tablet.jpg, (medium)], [images/bg-slide3-desktop.jpg, (large)]">
           <div class="slide-wrapper">
             <h2 class="gold">#2 Ripleys Aquarium of Canada</h2>
-            <p class="white show-for-medium-up">Recently opened, this aquarium is tons of fun - especially for families. You can even pet a stingray! What!</p>
+            <p class="white">Recently opened, this aquarium is tons of fun - especially for families. You can even pet a stingray! What!</p>
           </div>
         </li>
         <li class="slide-tiff">
           <img class="row-image" data-interchange="[images/bg-slide4-mobile.jpg, (default)], [images/bg-slide4-tablet.jpg, (medium)], [images/bg-slide4-desktop.jpg, (large)]">
           <div class="slide-wrapper">
             <h2 class="gold">#3 TIFF Bell Lightbox</h2>
-            <p class="white show-for-medium-up">The mecca of the Toronto Film Festival! If you have a few hours to spare in a dark room, this place hosts the best of art house cinema. Also, they are hosting a <a href="http://www.tiff.net/exhibitions/upcoming-exhibitions/stanley-kubrick-exhibition" target="_BLANK">Stanley Kubrick</a> exhibition!</p>
+            <p class="white">The mecca of the Toronto Film Festival! If you have a few hours to spare in a dark room, this place hosts the best of art house cinema. Also, they are hosting a <a href="http://www.tiff.net/exhibitions/upcoming-exhibitions/stanley-kubrick-exhibition" target="_BLANK">Stanley Kubrick</a> exhibition!</p>
           </div>
         </li>
       </ul>
@@ -361,11 +363,6 @@
   <div class="tip-container tip-left">
     <div class="tooltip">Arvin held an intervention for Caroline&#x27;s crippling plastic bag addiction. Progress is slow but ongoing.</div>
     <div class="cat icons-pusheen-right"></div>
-  </div>
-
-  <div class="tip-container tip-right">
-    <div class="tooltip">Every time she comes back from a trip, Arvin gets Caroline flowers. A tradition that started when she returned from Miami with broken arms.</div>
-    <div class="cat icons-pusheen-left"></div>
   </div>
 
   <!-- Outro content -->
