Link and text updates.

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <h5 class="white">$129/Night - 9min Walk to Ceremony</h5>
       <p class="white">The Hyatt Regency lies in the heart of downtown Toronto and is walking<br/>distance to the ceremony/reception! Please book by November 15th, 2014 using the link below.</p>
       <p class="white">Parking is available at the hotel, or at a number of lots in the area.</p>
-      <a target="_BLANK" class="button button-modal" href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=11750443">
+      <a target="_BLANK" class="button button-modal" href="https://aws.passkey.com/event/11750443/owner/1460357/landing">
         <span>Book this Hotel!</span><span>What a deal!</span>
       </a>
       <a target="_BLANK" class="button button-modal secondary" href="https://www.google.ca/maps/dir//Hyatt+Regency+Toronto,+370+King+St+W,+Toronto,+ON+M5V+1J9/@43.646285,-79.391716,17z/data=!4m12!1m3!3m2!1s0x882b34da0ea12bbb:0x7b9bf41770995c2e!2sHyatt+Regency+Toronto!4m7!1m0!1m5!1m1!1s0x882b34da0ea12bbb:0x7b9bf41770995c2e!2m2!1d-79.391716!2d43.646285?hl=en">
@@ -246,7 +246,7 @@
 
 
   <div class="tip-container tip-right">
-    <div class="tooltip">Arvin &amp; Caroline are contemplating getting a rabbit as a pet because rumour has it, they can be litter trained.</div>
+    <div class="tooltip">Arvin &amp; Caroline are contemplating getting a pet rabbit because rumour has it, they can be litter trained.</div>
     <div class="cat icons-pusheen-left"></div>
   </div>
 
