Padding on hayatt text, moved cats down, fixed player showing up multiple times, fixed kubrick font size, added comma after andrews name.

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
       <div class="icon medium-white-div"></div>
     </div>
     <p class="acknowledgements">
-      Photos courtesy of the magnificent <a href="http://www.urgencycompany.com/" target="_BLANK">Jason Gilmore</a>.<br/>Website design and layout by <a href="https://dribbble.com/andsem" target="_BLANK">Andrew Semuschak</a> a gentleman and a scholar.
+      Photos courtesy of the magnificent <a href="http://www.urgencycompany.com/" target="_BLANK">Jason Gilmore</a>.<br/>Website design and layout by <a href="https://dribbble.com/andsem" target="_BLANK">Andrew Semuschak</a>, a gentleman and a scholar.
     </p>
   </div>
 </div>
