Minor text changes.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <h2 class="white intro-title show-for-small-only">Caroline & Arvin</h2>
       <h3 class="white subtitle show-for-medium-up">are getting married december 28th, 2014 in Toronto</h3>
       <h4 class="white subtitle show-for-small-only">are getting married<br/>december 28th, 2014 in Toronto</h4>
-      <a href="#" class="button wide button-modal secondary" data-modal="rsvp"><span>Go ahead and RSVP here!</span><span>We promise you an awesome time!</span></a>
+      <a href="#" class="button wide button-modal secondary" data-modal="rsvp"><span>Go ahead and RSVP here!</span><span>Just do it!</span></a>
     </div>
   </div>
 </div>
@@ -208,7 +208,7 @@
   </div>
 
   <div class="tip-container tip-right">
-    <div class="tooltip">Because of her never ending antics, Caroline &amp; Arvin often &quot;joke&quot; about throwing Paxil &quot;dans la poubelle&quot;.</div>
+    <div class="tooltip">Because of her never ending antics, Caroline &amp; Arvin often &quot;joke&quot; about throwing their cat Paxil &quot;dans la poubelle&quot;.</div>
     <div class="cat icons-pusheen-left"></div>
   </div>
 
