Fixed notes field for mobile.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h3>Your details</h3>
           <input type="text" placeholder="Full Name" name="guest-name" required data-parsley-errors-messages-disabled data-parsley-group='["going", "not-going", "going-plusone"]'/>
           <input id="guest-address" class="your-details-going" type="textarea" placeholder="Full Mailing Address" name="guest-address" required data-parsley-errors-messages-disabled data-parsley-group='["going", "going-plusone"]'/>
-          <textarea id="guest-notes" rows="3" cols="35" placeholder="Notes / Special considerations" name="guest-notes"></textarea>
+          <textarea id="guest-notes" rows="3" placeholder="Notes / Special considerations" name="guest-notes"></textarea>
           <div class="radio-group three-items form-group your-details-going" id="guest-meal">
             <input type="radio" name="guest-meal" value="beef" id="guest-meal-beef" required data-parsley-errors-messages-disabled data-parsley-group='["going", "going-plusone"]'><label for="guest-meal-beef">Beef</label>
             <input type="radio" name="guest-meal" value="fish" id="guest-meal-fish" required><label for="guest-meal-fish">Fish</label>
