Removed RSVP form as RSVP is now closed.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 
   <a href="#" class="rsvp-close icon close">Close</a>
 
+  <div id="rsvp-over">
+      <h3>RSVP for the wedding is closed.</h3>
+  </div>
+
+  <!--
   <div id="rsvp-thankyou">
     <div class="icon checkmark"></div>
     <h3>Thank you for RSVPing</h3>
@@ -83,6 +88,8 @@
       </form>
     </div>
   </div>
+  -->
+
 </div>
 <!-- /RSVP form -->
 
@@ -113,7 +120,7 @@
   <!-- Intro content -->
 <div id="intro" class="row">
   <div class="small-12 medium-12 large-12 column">
-    <img class="row-image" data-interchange="[images/bg-intro1-mobile.jpg, (default)], [images/bg-intro1-tablet.jpg, (medium)], [images/bg-intro1-desktop.jpg, (large)]">
+    <img class="row-image" data-interchange="[images/bg-intro2-mobile.jpg, (default)], [images/bg-intro1-tablet.jpg, (medium)], [images/bg-intro1-desktop.jpg, (large)]">
     <div class="row-content with-background text-center">
       <h1 class="white intro-title show-for-medium-up">Caroline Habib & Arvin Singla</h1>
       <h2 class="white intro-title show-for-small-only">Caroline & Arvin</h2>
