Added links for dinner seating.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <li><a href="#accommodation">Accommodations</a></li>
       <li><a href="#wondering">FAQ</a></li>
       <li><a href="#thingstodo">Things to do</a></li>
-      <li><a href="#" class="menu-rsvp" data-modal="rsvp">RSVP</a></li>
+      <li><a href="/table.html" class="menu-rsvp">Dinner Seating</a></li>
     </ul>
   </nav>
 </div>
@@ -126,7 +126,7 @@
       <h2 class="white intro-title show-for-small-only">Caroline & Arvin</h2>
       <h3 class="white subtitle show-for-medium-up">are getting married december 28th, 2014 in Toronto</h3>
       <h4 class="white subtitle show-for-small-only">are getting married<br/>december 28th, 2014 in Toronto</h4>
-      <a href="#" class="button wide button-modal secondary" data-modal="rsvp"><span>Go ahead and RSVP here!</span><span>Just do it!</span></a>
+      <a href="/table.html" class="button wide button-modal secondary"><span>Dinner Seating</span><span>See where to sit</span></a>
     </div>
   </div>
 </div>
