Added Louise-andre's last name.

--- a/table.html
+++ b/table.html
@@ -438,7 +438,7 @@
             </tr>
           
             <tr>
-              <td class="table-name">Louise-Andrée</td>
+              <td class="table-name">Louise-Andrée Saulnier</td>
               <td class="table-number">3</td>
             </tr>
           
